[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Mirror.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mirror-sheet.png" type="Texture" id=2]
[ext_resource path="res://Sounds/MirrorAttacked.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/MirrorImpackt.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "MirrorHit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idleMirror"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Mirror" type="Area2D"]
position = Vector2( -8.4818, -8.48179 )
input_pickable = false
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
frame = 1
region_rect = Rect2( 336, 160, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 8
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 8
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 8
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Position2D" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MirrorHit = SubResource( 2 )
anims/idleMirror = SubResource( 3 )

[node name="Sounds" type="Node2D" parent="."]

[node name="MirrorAttacked" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 3 )

[node name="MirrorImpact" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )
pitch_scale = 5.0
